# c--

./: .gitignore  C--.sln  Makefile  README.md  c++.txt  c--.sln  default.nix  interfuck181013.vspx  mandelbrot.bf  test.sh
.github/workflows/: rust.yaml
Debug/: optimized  vanilla
Interpeter/: Program.cs
Interpeter/Properties/: launchSettings.json
doc/: cmm_documentation.md  cmm_documentation.txt
interfuck/: interfuck.vcxproj  main.cpp  test.bf
transpeter/: astnode.py  builtin.py  code_gen.py  code_generator.py  lexer.py  main.py  new.cmm  parser.py  std.lib  stdlib.pkl  test.cmm  utils.py
transpeter-rs/: Cargo.toml  grammar.txt
transpeter-rs/lib/: std.cmm
transpeter-rs/src/: ast.rs  brainfuck.rs  code_gen.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  util.rs
transpeter-rs/src/ast/: mod.rs  pretty_print.rs  sexp.rs
transpeter-rs/src/code_gen/: mod.rs  optimizations.rs
transpeter-rs/src/lexer/: mod.rs  tests.rs
transpeter-rs/src/parser/: mod.rs  tests.rs
transpeter-rs/tests/: compile.rs  example.rs  lexer.rs  output.rs
transpeter-rs/tests/output/: cyclic_recursion.cmm  cyclic_recursion.stderr  division.cmm  divmod.cmm  function.cmm  if_else.cmm  logical.cmm  logical.stdout  multiplication.cmm  multiplication.stdout  recursion.cmm  recursion.stderr  relational.cmm  stdlib.cmm
transpeter/tests/: cyclic_recursion.result  cyclic_recursion.test  division.result  division.test  divmod.result  divmod.test  function.test  if-else.result  if-else.test  logical.result  logical.test  multiplication.test  recursion.result  recursion.test  (+5 more)
(+19 files in other folders)
