[package]
name = "transpeter"
version = "0.1.0"
authors = ["konsumlamm <konsumlamm@gmail.com>"]
edition = "2018"

[profile.release]
panic = "abort"
lto = "thin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.32", default-features = false }

[dev-dependencies]
rayon = "^1.0"
